# xtd_tools

./: .gitignore  AUTHORS.md  CMakeLists.txt  README.md
xtd_tools/: CMakeLists.txt
xtd_tools/properties/: resources.cmake  settings.cmake  settings.h  target_properties.cmake
xtd_tools/resources/: xtd_tools.icns
xtd_tools/src/: check_doxygen_form.cpp  check_doxygen_form.h  color_converter_form.cpp  color_converter_form.h  doxygen_example_generator_form.cpp  doxygen_example_generator_form.h  enumeration_unit_tests_generator_form.cpp  enumeration_unit_tests_generator_form.h  main_form.cpp  main_form.h  release_note_generator_form.cpp  release_note_generator_form.h  sources_statistics_form.cpp  sources_statistics_form.h  style_sheet_renderer_form.cpp  style_sheet_renderer_form.h
